# gnosis

./: .ai-rules.md  .clauderules  .cursorrules  .env.cloud-review  .env.example  .env.local-llm  .env.minimal  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  biome.json  check_all_vibes.ts  check_db_vibe.ts  coverage.txt  docker-compose.yml  drizzle.config.ts  gnosis-tasks.sqlite  lint_output.txt  package.json  plan.md  search_lessons.ts  setup_db.js  setup_db.ts  stderr.txt  test_gnosis_handler.ts  tsconfig.json  tsconfig.tsbuildinfo
.github/: pull_request_template.md
apps/monitor/src-tauri/: Cargo.toml  tauri.conf.json
apps/monitor/src-tauri/capabilities/: default.json
apps/monitor/src-tauri/permissions/: monitor.toml
apps/monitor/src-tauri/src/: lib.rs
apps/monitor/src-tauri/src/monitor/: cli.rs  collector.rs  commands.rs  mod.rs  models.rs  state.rs  ws.rs
docs/: LLMHARNESS_INTEGRATION.md  MAINTENANCE.md  PHASE2_PLAN.md  active-use-improvement-plan.md  adjustment-implementation-plan.md  adjustment-usage.md  agent-first-gnosis-refactoring-plan.md  agentic-search-gemma4-stability-test-plan.md  agentic-search-memory-loop-plan.md  architecture.md  (+64 more)
services/embedding/: README.md  pyproject.toml  requirements.txt
services/embedding/e5embed/: __init__.py  cli.py  daemon.py  simple_cli.py
services/embedding/scripts/: download_model.py  embed_example.py  embed_text.py  install_cli.sh
services/embedding/tests/: test_cli.py  test_daemon.py  test_daemon_queue.py  test_simple_cli.py
(+644 files in other folders)
